--- a/css/rancak.css
+++ b/css/rancak.css
@@ -19,7 +19,7 @@
 
 
 
-body, html{font-family:'DM Sans',sans-serif; font-size:var(--default-fontsize); font-weight:400; letter-spacing:0.4px; font-feature-settings:'lnum' 1; 
+body, html{font-family:'Nunito',sans-serif; font-size:var(--default-fontsize); font-weight:500; letter-spacing:0.4px; font-feature-settings:'lnum' 1; 
 -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; -webkit-font-smoothing:antialiased; 
 -moz-osx-font-smoothing:grayscale; text-rendering:optimizeSpeed;}
 html{scroll-behavior:smooth;}
@@ -34,8 +34,11 @@ display:flex; text-align:center; align-items:center; justify-content:center;}
 
 
 .section-title{margin-bottom:var(--size-4);}
-.section-title-name{font-size:var(--size-4); font-weight:bold;}
+.section-title-name{font-size:24px; font-weight:900;}
+.section-title-link, .section-more{align-items:center;}
 .section-title-link{margin-top:var(--size-1); display:inline-flex;}
+.section-title-link .svgicon, .section-more .svgicon{margin-left:var(--size-2);}
+.section-more{display:flex; margin-top:var(--size-4);}
 
 
 
@@ -63,7 +66,17 @@ header .sticky-link .svgicon{height:var(--icon-size);}
 
 
 
-.{}
+.content-list-container{display:grid; grid-gap:var(--size-4);}
+
+.content-link{--thumb-size:76px; display:grid; grid-gap:var(--size-3); grid-template-columns:var(--thumb-size) 1fr;}
+.content-thumb-frame:before{padding-top:100%;}
+.content-link-info{display:flex; align-items:center;}
+.content-link-info > span{display:flex; flex-wrap:wrap;}
+.content-link-info > span > *{margin-top:var(--size-2);}
+.content-link-title, .content-link-desc{width:100%; display:-webkit-box; -webkit-box-orient:vertical; overflow:hidden; -webkit-line-clamp:2;}
+.content-link-title{font-size:var(--title-fontsize); font-weight:bold; margin-top:0 !important; line-height:150%;}
+.content-link-category{margin-right:var(--size-2); padding-right:var(--size-2); border-right:1px solid}
+.content-link-desc{line-height:150%;}
 
 
 
