--- a/css/rancak-desktop.css
+++ b/css/rancak-desktop.css
@@ -5,7 +5,7 @@
 
 header .width-max > *{display:flex;}
 header .sticky-logo{padding-left:var(--size-5);}
-header .wifi-coin-button{margin-right:var(--size-4);}
+header .sticky-search-open{margin-right:var(--size-4);}
 
 
 
