--- a/css/widget-wificoin.css
+++ b/css/widget-wificoin.css
@@ -1,15 +1,17 @@
 .column-special .column-container{height:100%; grid-row-gap:var(--size-5);}
 
 .widget-wificoin{position:relative; background-color:var(--color-text-2); min-height:250px;}
-.widget-wificoin-bg, .widget-wificoin-container{position:absolute; top:0; left:0; width:100%; height:100%;}
-.widget-wificoin-bg{z-index:1;}
-.widget-wificoin-container{z-index:1000; padding:var(--size-4); display:flex; flex-wrap:wrap; align-content:space-between;}
+.widget-wificoin-bg, .widget-wificoin-container{}
+.widget-wificoin-bg{position:absolute; z-index:1; top:0; left:0; width:100%; height:100%;}
+.widget-wificoin-container{position:relative; z-index:1000; height:100%; padding:var(--size-5) var(--size-4); 
+display:flex; flex-wrap:wrap; align-content:space-between;}
 .widget-wificoin-container *{text-align:center;}
 .widget-wificoin-container > *{width:100%; display:grid; grid-gap:var(--size-2);}
 .wwcc-logo .main-icon{height:auto;}
 .wwcc-logo .main-logo-black{fill:var(--bg-2);}
 .wwcc-title{font-size:34px; text-transform:uppercase; font-weight:900; color:var(--bg-2);}
 .wwcc-desc{color:var(--bg-1);}
+.wwcc-bottom{margin-top:var(--size-4);}
 .wwcc-button{box-shadow:var(--shadow-default);}
 .wwcc-button .svgicon{margin-left:var(--size-3);}
 
@@ -36,6 +38,7 @@
 
 
 @media screen and (min-width:1024px) and (max-width:1279px){
+  .widget-wificoin-container{padding:var(--size-4);}
   .wwcc-desc{display:-webkit-box; -webkit-box-orient:vertical; overflow:hidden; -webkit-line-clamp:2;}
 }
 
