--- a/css/informasi.css
+++ b/css/informasi.css
@@ -1,19 +1,53 @@
-.section-container{font-size:18px; line-height:160%;}
+body{padding-top:0;}
+.rancak-container{margin-top:0;}
+.main-container{grid-row-gap:0;}
+.column-container{grid-row-gap:0; top:0;}
+.section-container{font-size:16px; line-height:160%;}
+.section-title{margin-top:var(--size-7);}
 
 
 
-.information-content{font-size:18px; line-height:160%; display:grid; grid-gap:var(--size-4);}
+.information-content{display:grid; grid-gap:var(--size-4);}
 .information-content ul, .information-content ol{padding-left:20px; display:grid; grid-gap:var(--size-4);}
 .information-content ul{list-style:square;}
 .information-content ol{list-style:decimal;}
+.information-content ol.list-abjad{list-style:lower-latin;}
 .information-content h2, .information-content h3, .information-content h4{font-weight:900; font-size:18px; line-height:150%;}
-.information-content b, .information-content strong{font-weight:900;}
+.information-content b, .information-content strong{font-weight:900; display:inline-block; margin-bottom:var(--size-1);}
+
+.crew-list{display:grid; grid-gap:var(--size-1); margin-top:var(--size-5);}
+.crew-container{--box-color:#212121; display:grid; grid-gap:var(--size-1); grid-template-columns:repeat(auto-fit, minmax(150px,1fr));}
+.crew-box{border-radius:var(--rounded-1); overflow:hidden; background-color:var(--box-color); color:var(--bg-1);}
+.crew-thumb:before{padding-top:100%;}
+.crew-thumb:after{position:absolute; z-index:1000; bottom:0; left:0; height:34%; width:100%; content:''; display:block;
+background:linear-gradient(to bottom, transparent 0%, var(--box-color) 100%)}
+.crew-info{padding:var(--size-3); padding-top:0; line-height:140%; font-size:14px;}
+.crew-info *{text-align:center;}
+.crew-name{font-weight:900; text-transform:uppercase;}
 
 
 
+.peta-situs .section-title{margin-bottom:var(--size-3);}
 .peta-situs-list{padding-left:20px; list-style:disc;}
 .peta-situs-sub{list-style:circle;}
-.peta-situs-link{display:block; padding:var(--size-2) 0;}
+.peta-situs-link{display:block; padding:var(--size-1) 0;}
+
+
+
+.kontak-kami-container{display:grid; grid-gap:var(--size-4);}
+.kkc-map{position:relative; border-radius:var(--rounded-1); overflow:hidden;}
+.kkc-map:before{content:''; display:block; padding-top:56.25%;}
+.kkc-map iframe{position:absolute; top:0; left:0; width:100%; height:100%;}
+.kkc-list{display:grid; grid-gap:var(--size-3);}
+.kkc-link{display:flex; align-items:center;}
+.kkc-link .svgicon{width:20px; height:auto; margin-right:var(--size-3);}
+
+
+
+.karir-container{display:grid; grid-gap:var(--size-5);}
+.karir-title{font-size:18px; font-weight:900;}
+.karir-list{list-style:circle; padding-left:20px;}
+.karir-list > li{padding:var(--size-1) 0;}
 
 
 
