--- a/wifi-login/css/hold.css
+++ b/wifi-login/css/hold.css
@@ -3,16 +3,18 @@
   --bg-3:#3A1C3E;
   --bg-4:#838EC6;
   --bg-5:#F44336; 
+  --bg-6:#b3ad33; 
   --color-border:0 0 0;
   --color-text-1:#E0E0E0; 
   --color-text-2:#FFFFFF; 
   --rounded-1:var(--size-2);
   --rounded-2:var(--size-3);
+  --rounded-3:var(--size-5);
   --hover-opacity:0.55;
   --transition-default:all 0.34s;
   --shadow-default:0 2px 10px rgb(0 0 0 / 25%);
   --shadow-neumorp:-2px -2px 4px rgba(255,255,255,.2), 2px 2px 12px rgba(0,0,0,.2);
-  --shadow-inset:inset -2px -2px 4px rgba(255,255,255,.2), inset 2px 2px 12px rgba(0,0,0,.2);
+  --shadow-inset:inset -2px -2px 4px rgba(0,0,0,.13), inset 2px 2px 12px rgba(0,0,0,.13);
 }
 
 
@@ -21,18 +23,41 @@ body, html{color:var(--color-text-1);}
 body{background-attachment:fixed; background-position:bottom center; background-repeat:no-repeat; background-size:cover;}
 a, .btn, button{transition:var(--transition-default); cursor:pointer}
 a, button{color:var(--color-text-2); fill:var(--color-text-2);}
-a:hover, button:hover{color:var(--color-text-3); fill:var(--color-text-3);}
-.btn, a.btn, button.btn{background-color:var(--bg-5); color:var(--bg-2); fill:var(--bg-2); border-radius:var(--rounded-1);}
-.btn:hover, a.btn:hover, button.btn:hover{background-color:var(--bg-3);}
+a:hover, button:hover{color:var(--bg-5); fill:var(--bg-5);}
+.btn, a.btn, button.btn{background-color:var(--bg-5); color:var(--color-text-2); fill:var(--color-text-2); 
+border-radius:var(--rounded-3); box-shadow:var(--shadow-default);}
+.btn:hover, a.btn:hover, button.btn:hover{background-color:var(--bg-3); color:var(--color-text-2); fill:var(--color-text-2);}
 .flex_ori > img{opacity:0; transition:all 300ms;}
 .flex_ori > img.lazyloaded{opacity:1;}
+.section-title b{color:var(--color-text-2);}
 .thumb-loading:before{animation:skeleton-loading 0.5s linear infinite alternate; background-color:var(--color-text-2);}
 @-webkit-keyframes skeleton-loading{0%{opacity:0.05;}100%{opacity:0.15;};}
 @keyframes skeleton-loading{0%{opacity:0.05;}100%{opacity:0.15;};}
 
 
 
+.main-logo-red{fill:var(--bg-5);}
+.main-logo-black{fill:var(--color-text-2);}
+.header-idgs:hover{opacity:0.34;}
+.header-idgs-title{color:var(--color-text-2);}
+.header-info-notconnect{color:var(--bg-5);}
+.header-info-connect{color:var(--bg-6);}
 .header-info-name{color:var(--color-text-2);}
+
+
+
+.rancak-payment-button{background-color:var(--bg-5); box-shadow:var(--shadow-default); border-radius:var(--rounded-2);}
+.rancak-payment-button:hover{background-color:var(--bg-1); color:var(--color-text-2); fill:var(--color-text-2);}
+
+
+
+.form-field, .form-button-next{background-color:var(--bg-3); border-radius:var(--rounded-2);}
+.form-field{color:var(--color-text-2); border-color:rgb(var(--color-border) / 13%); box-shadow:var(--shadow-inset);}
+
+
+
+.infobox{background-color:var(--bg-2); border-radius:var(--rounded-1);}
+.infobox-data{color:var(--color-text-2);}
 
 
 
